rubocop/examples/bad/style_LineLength.rb
# TODO: Limit lines to 80 characters.
